# forgepilot-agent

./: .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  scripts-dev-tauri.ps1  scripts-dev.ps1
.github/workflows/: forgepilot-ci.yml  pages-website.yml  release.yml
.refs/forgepilot-shell/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.refs/open-agent-sdk-typescript/: README.md  package.json  pnpm-lock.yaml
docs/: 0407.md  compatibility_matrix.md  engineering_standards.md  integration_guide.md  interview_deep_dive_guide.md  interview_oral_script_10min.md  interview_pressure_qa.md  parity_report.md  project_handbook.md
forgepilot_api/: __init__.py  __main__.py  app.py  config.py  main.py  models.py  sidecar_entry.py
forgepilot_api/api/: agent.py  audit.py  files.py  health.py  mcp.py  metrics.py  preview.py  providers.py  sandbox.py  utils.py
forgepilot_api/core/: __init__.py  context.py  jwt_auth.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py  security_middleware.py  settings.py  telemetry.py
forgepilot_api/ops/: __init__.py  parity.py
forgepilot_api/sandbox/: __init__.py  claude.py  codex.py  manager.py  native.py  pool.py  registry.py  types.py
forgepilot_api/services/: agent_service.py  chat_service.py  codex_config_service.py  preview_service.py  provider_service.py  runtime_state_service.py
forgepilot_api/storage/: db.py  repositories.py
forgepilot_sdk/: __init__.py  agent.py  engine.py  hooks.py  policy.py  sdk_mcp_server.py  session.py  tool_helper.py  types.py
scripts/: README.md  __init__.py  build_python_sidecar.py  check_brand_residue.ps1  clean_stale_artifacts.ps1  dev.ps1  dev.py  generate_parity_report.py  generate_release_notes.py  release_windows.ps1  resolve_frontend_shell.py  scan_brand_residue.py  smoke_api_chain.py  verify_local.ps1  write_sidecar_checksums.py
tests/: README.md
website/: README.md  index.html  script.js  styles.css
(+127 files in other folders)
