[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "forgepilot-agent"
version = "0.1.0"
description = "ForgePilot Agent: Python-first autonomous coding runtime with protocol-compatible API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "automation", "fastapi", "sse", "tauri"]
authors = [
  { name = "Local Internal Rewrite" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
]
redis = [
  "redis>=5.0.0",
]
observability = [
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp-proto-http>=1.26.0",
]

[project.scripts]
forgepilot-api = "forgepilot_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["forgepilot_sdk", "forgepilot_api"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "live_network: tests that call external network services and are skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".build",
  ".refs",
  ".runlogs",
  "sessions",
]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
